--- a/projects/ui-lib/package.json
+++ b/projects/ui-lib/package.json
@@ -1,9 +1,19 @@
 {
-  "name": "ui-lib",
+  "name": "@ferhaps/easy-ui-lib",
   "version": "0.0.1",
+  "description": "Angular UI components, directives and pipes library with Angular Material",
+  "keywords": ["angular", "ui", "components", "pipes", "directives", "library"],
+  "author": "Ferhan Cherkez",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ferhaps/angular-ui-library"
+  },
   "peerDependencies": {
     "@angular/common": "^19.0.6",
-    "@angular/core": "^19.0.6"
+    "@angular/core": "^19.0.6",
+    "@angular/material": "^19.0.5",
+    "@angular/cdk": "^19.0.5"
   },
   "dependencies": {
     "tslib": "^2.3.0"
