--- a/projects/ui-lib/package.json
+++ b/projects/ui-lib/package.json
@@ -3,12 +3,22 @@
   "version": "0.0.4",
   "description": "Angular UI components, directives and pipes library with Angular Material",
   "keywords": ["angular", "ui", "components", "pipes", "directives", "library"],
-  "author": "Ferhan Cherkez",
+  "author": {
+    "name": "Ferhan Cherkez",
+    "email": "fericherkez14052002@gmail.com",
+    "url": "https://www.linkedin.com/in/ferhan-cherkez-6931a1190/"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/Ferhaps/angular-ui-library/tree/modules"
   },
+  "main": "bundles/my-awesome-button.umd.js",
+  "module": "fesm2015/my-awesome-button.js",
+  "es2015": "fesm2015/my-awesome-button.js",
+  "esm5": "esm5/my-awesome-button.js",
+  "fesm2015": "fesm2015/my-awesome-button.js",
+  "typings": "my-awesome-button.d.ts",
   "peerDependencies": {
     "@angular/common": "^19.0.6",
     "@angular/core": "^19.0.6",
