--- a/projects/ui-lib/package.json
+++ b/projects/ui-lib/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@ferhaps/easy-ui-lib",
-  "version": "0.0.3",
+  "version": "0.0.8",
   "description": "Angular UI components, directives and pipes library with Angular Material",
   "keywords": ["angular", "ui", "components", "pipes", "directives", "library"],
-  "author": "Ferhan Cherkez",
+  "author": {
+    "name": "Ferhan Cherkez",
+    "email": "fericherkez14052002@gmail.com",
+    "url": "https://www.linkedin.com/in/ferhan-cherkez-6931a1190/"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
